# stwo-verifier-no-std

./: .gitmodules  Cargo.toml  README.md
src/: backend.rs  channel.rs  circle.rs  constraints.rs  fft.rs  fft_utils.rs  fri.rs  fri_utils.rs  lib.rs  proof_of_work.rs  queries.rs  quotients.rs  serde_utils.rs  tree.rs  utils.rs  vcs.rs  verifier.rs
src/air/: accumulation.rs  components.rs  mask.rs  mod.rs
src/backend/: mod.rs
src/backend/cpu/: accumulation.rs  circle.rs  mod.rs  quotients.rs
src/channel/: blake2s.rs  mod.rs
src/constraint_framework/: component.rs  info.rs  logup.rs  mod.rs  point.rs  preprocessed_columns.rs
src/fields/: backend.rs  cm31.rs  m31.rs  mod.rs  qm31.rs  secure_column.rs
src/lookups/: mod.rs  utils.rs
src/pcs/: mod.rs  prover.rs  quotients.rs  utils.rs  verifier.rs
src/poly/: line.rs  twiddles.rs  utils.rs
src/poly/circle/: canonic.rs  domain.rs  evaluation.rs  mod.rs  ops.rs  poly.rs  secure_poly.rs
src/types/: commitment.rs  component.rs  error.rs  fri.rs  mod.rs  pcs.rs  point.rs  poly.rs  proof.rs
src/vcs/: blake2_hash.rs  blake2_merkle.rs  hash.rs  mod.rs  ops.rs  prover.rs  utils.rs  verifier.rs
tests/: integration_test.rs  proof_deser_test.rs
